--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "watch:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve",
     "dev": "npm-run-all clean build-dev:webpack --parallel watch:*",
     "build:webpack": "cross-env NODE_ENV=production webpack --mode production",
+    "build:ghp:webpack": "cross-env NODE_ENV=production webpack --mode production",
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
+    "build:ghp:eleventy": "cross-env ELEVENTY_ENV=production eleventy --pathprefix 'Eleventy-Recipe-Book'",
     "build": "run-s clean build:*",
+    "build:ghp": "run-s clean build:ghp:*",
     "serve:local": "serve _site",
     "serve": "run-s build serve:local",
     "clean": "rimraf _site",
@@ -26,7 +29,6 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "cssnano": "^4.1.10",
-    "date-fns": "^2.15.0",
     "eleventy-plugin-lazyimages": "^2.0.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -63,5 +65,6 @@
     "*.json": [
       "prettier --write"
     ]
-  }
+  },
+  "dependencies": {}
 }
